--- a/src/app/usuarios/lista/lista.component.html
+++ b/src/app/usuarios/lista/lista.component.html
@@ -1,3 +1,18 @@
+<div class="alert alert-info text-center" role="alert" *ngIf="loading">
+  <h4 class="alert-heading">Cargando...</h4>
+  <p>
+    <em class="fa-solid fa-atom fa-spin fa-2xl"></em>
+  </p>
+</div>
+
+<div class="alert alert-danger text-center" role="alert" *ngIf="error">
+  <h4 class="alert-heading">Error</h4>
+  <pre class="text-start">
+  {{ error | json }}
+</pre
+  >
+</div>
+
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col" *ngFor="let user of usuarios">
     <div class="card">
