--- a/src/app/usuarios/usuario/usuario.component.html
+++ b/src/app/usuarios/usuario/usuario.component.html
@@ -1,1 +1,34 @@
-<p>usuario works!</p>
+<div class="alert alert-info text-center" role="alert" *ngIf="loading">
+  <h4 class="alert-heading">Cargando...</h4>
+  <p>
+    <em class="fa-solid fa-atom fa-spin fa-2xl"></em>
+  </p>
+</div>
+
+<div class="alert alert-danger text-center" role="alert" *ngIf="error">
+  <h4 class="alert-heading">Error</h4>
+  <pre class="text-start">
+  {{ error | json }}
+</pre
+  >
+</div>
+
+<div class="row">
+  <div class="col-4">
+    <img
+      [src]="user?.avatar"
+      class="img-thumbnail"
+      [alt]="'img' + user?.first_name"
+    />
+  </div>
+  <div class="col">
+    <ul class="list-group">
+      <li class="list-group-item">
+        <strong>Nombre: </strong> {{ user?.first_name }}
+      </li>
+      <li class="list-group-item">
+        <strong>Apellido: </strong>{{ user?.last_name }}
+      </li>
+    </ul>
+  </div>
+</div>
